2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* RandomText.wrl: 

2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Text.wrl:
	* RandomText.wrl:
	* RandomText.wrl: 

2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>

	* test.wrl:
	* OutlineEditor.wrl:
	* TransformHandle.wrl: 

2013-10-25  Holger Seelig  <holger.seelig@yahoo.de>

	* 4vong.wrl: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* CylinderSensor.wrl: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* test.wrl: 

2013-10-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>

	* PlaneSensor.wrl: 

2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>

	* PlaneSensor.wrl: 

2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* LineSensor.wrl: 

2013-10-20  Holger Seelig  <holger.seelig@yahoo.de>

	* Billboard110.wrl:
	* TransformHandle.wrl: 

2013-10-19  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Text.wrl:
	* TransformHandle.wrl: 

2013-10-18  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* WorldInfo.wrl:
	* Fields.pl:
	* OutlineEditor.wrl:
	* MFBool.wrl:
	* SFNode.wrl:
	* MFTime.wrl:
	* MFNode.wrl:
	* SFBool.wrl:
	* SFTime.wrl:
	* MFBool.x3dv:
	* SFNode.x3dv:
	* MFTime.x3dv:
	* SFBool.x3dv:
	* SFTime.x3dv:
	* MFNode.x3dv:
	* MFVec2d.wrl:
	* SFVec4f.wrl:
	* MFColor.wrl:
	* SFVec4d.wrl:
	* MFFloat.wrl:
	* MFInt32.wrl:
	* MFImage.wrl:
	* SFVec2d.wrl:
	* SFInt32.wrl:
	* SFImage.wrl:
	* SFVec3f.wrl:
	* SFVec3d.wrl:
	* SFVec2f.wrl:
	* SFFloat.wrl:
	* MFVec3f.wrl:
	* MFVec3d.wrl:
	* MFVec2f.wrl:
	* MFVec4f.wrl:
	* SFColor.wrl:
	* MFVec4d.wrl:
	* SFVec4d.x3dv:
	* SFVec3f.x3dv:
	* MFColor.x3dv:
	* SFVec4f.x3dv: