@@ -1,3 +1,8 @@
+2013-10-31  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Library.mdproj:
+	* ScreenFontStyle.wrl: 
+
 2013-10-30  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* RandomText.wrl: 
